--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <Title>MrMemesB'Dank</title>
 </head>
 <body>
-Oh man, it's the <em>dankest</em> webpage you've ever seen; 
+Oh man, it's the <em>dankest</em> webpage you've ever seen 
 </body>
 </html>
